# LWWordCounter

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE.txt  README.md  requirements.txt
doc/: deserializer_usage.mediawiki
schema/: user_input_schema.json
src/: Deserializer.py  WordCounter-helper.cpp  WordCounter-helper.hpp  WordCounter-helpers.cpp  WordCounter-helpers.hpp  deserializer.py  main.cpp
src/tests/: test_suite.cpp  test_suite.py
src/tests/test_files/: test1_serialized_summary.bson  test1_serialized_summary.ubj  test2_serialized_summary.bson  test2_serialized_summary.ubj  test3.txt  test3_serialized_summary.bson  test3_serialized_summary.ubj  test4.txt  test4_serialized_summary.bson  test4_serialized_summary.ubj  test5.txt  test5_serialized_summary.bson  test5_serialized_summary.ubj
src/tests/test_text_files/: test1_serialized_summary.bson  test1_serialized_summary.ubj  test2_serialized_summary.bson  test2_serialized_summary.ubj  test3_serialized_summary.bson  test3_serialized_summary.ubj  test4_serialized_summary.bson
